--- a/services.css
+++ b/services.css
@@ -2,6 +2,17 @@ body {
     font-family: 'Quicksand', sans-serif;
     font-weight: 400;
     margin: 0px;
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+body.loaded {
+    opacity: 1;
+}
+
+.fade-out {
+    opacity: 0;
+    transition: opacity 0.2s ease-in-out;
 }
 
 .center {
